// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should match snapshot 1`] = `
<div
  className="container"
/>
`;

exports[`Container should take an optional fluid prop 1`] = `
<div
  className="container-fluid"
/>
`;
